force-app/main/default/objects/Forrester_SHIR_CRDR_RELATED_CRDRS_VIE__x/Forrester_SHIR_CRDR_RELATED_CRDRS_VIE__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_CRDR_RELATED_CRDRS_VIEW</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CRDR_RELATED_CRDRS_VIEW</externalName>
    <label>Related CRDR</label>
    <pluralLabel>Related CRDRs</pluralLabel>
</CustomObject>