force-app/main/default/objects/Forrester_SHIR_CRDR_RELATED_CRDRS_VIE__x/fields/CASE_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_RECID__c</fullName>
    <description>CASE_RECID</description>
    <externalDeveloperName>CASE_RECID</externalDeveloperName>
    <label>Case</label>
    <length>12</length>
    <referenceTo>Forrester_Case__x</referenceTo>
    <relationshipLabel>Related CRDRs</relationshipLabel>
    <relationshipName>Related_CRDRs</relationshipName>
    <type>ExternalLookup</type>
</CustomField>