force-app/main/default/objects/Forrester_SHIR_CRDR_RELATED_CRDRS_VIE__x/fields/CASE_STATUS__c.field-meta.xml
<CustomField>
    <fullName>CASE_STATUS__c</fullName>
    <description>CASE_STATUS</description>
    <externalDeveloperName>CASE_STATUS</externalDeveloperName>
    <label>Case Status</label>
    <length>120</length>
    <type>Text</type>
</CustomField>