force-app/main/default/objects/Forrester_SHIR_CRDR_RELATED_CRDRS_VIE__x/fields/LICENSEE__c.field-meta.xml
<CustomField>
    <fullName>LICENSEE__c</fullName>
    <description>LICENSEE</description>
    <externalDeveloperName>LICENSEE</externalDeveloperName>
    <label>Licensee</label>
    <length>90</length>
    <type>Text</type>
</CustomField>