force-app/main/default/objects/Forrester_SHIR_CRDR_RELATED_CRDRS_VIE__x/fields/RELATED_CASE_CRDR_RECID__c.field-meta.xml
<CustomField>
    <fullName>RELATED_CASE_CRDR_RECID__c</fullName>
    <description>RELATED_CASE_CRDR_RECID</description>
    <externalDeveloperName>RELATED_CASE_CRDR_RECID</externalDeveloperName>
    <label>Related CRDR</label>
    <length>12</length>
    <referenceTo>Forrester_SHIR_CRDR_VIEW__x</referenceTo>
    <relationshipLabel>DO_NOT_USE</relationshipLabel>
    <relationshipName>Related_CRDRs_Child</relationshipName>
    <type>ExternalLookup</type>
</CustomField>