force-app/main/default/objects/Forrester_SHIR_CRDR_RELATED_CRDRS_VIE__x/fields/RELATED_HAS_OPEN_CHK_LIST__c.field-meta.xml
<CustomField>
    <fullName>RELATED_HAS_OPEN_CHK_LIST__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RELATED_HAS_OPEN_CHK_LIST</description>
    <externalDeveloperName>RELATED_HAS_OPEN_CHK_LIST</externalDeveloperName>
    <label>Related Has Open Checklist</label>
    <type>Checkbox</type>
</CustomField>